[workspace]
members = [
    "physics-integration-layer",
    # "rapier2d", "rapier3d",
    "avian2d", "avian3d",
    "demos",
]
default-members = [".", "demos"]

[workspace.package]
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/idanarye/bevy-tnua"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "locomotion", "game-controls"]

[package]
name = "bevy-tnua"
description = "A floating character controller for Bevy"
version = "0.19.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua"
readme = "README.md"
exclude = [
    "assets",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.14", default-features = false }
bevy-tnua-physics-integration-layer = { version = "0.4.0", path = "physics-integration-layer" }
thiserror = "1.0.53"

[dev-dependencies]
bevy = { version = "^0.14", default-features = false, features = [
     "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    # "bevy_winit",
    "bevy_render",
    "bevy_gltf",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_text",
    # "png",
    # "hdr",
    # "vorbis",
    "x11",
    # "filesystem_watcher",
] }
avian3d = { version = "^0.1", features = ["3d", "debug-plugin", "parallel", "parry-f32"] }
bevy-tnua-avian3d = { path = "avian3d" }

[package.metadata.docs.rs]
all-features = true

[features]
f64 = ["bevy-tnua-physics-integration-layer/f64"]
