[workspace]
members = [
    "physics-integration-layer",
    # "rapier2d", "rapier3d",
    "avian2d", "avian3d",
    "demos", "macros",
]
default-members = [".", "demos"]

[workspace.package]
edition = "2024"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/idanarye/bevy-tnua"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "locomotion", "game-controls"]

[package]
name = "bevy-tnua"
description = "A floating character controller for Bevy"
version = "0.26.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua"
readme = "README.md"
exclude = [
    "assets",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.17", default-features = false, features = [
    "bevy_log",
]}
bevy-tnua-physics-integration-layer = { version = "^0.10", path = "physics-integration-layer" }
bevy-tnua-macros = { version = "^0.1", path = "macros" }
thiserror = "2.0.12"
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
bevy = { version = "^0.17", default-features = false, features = [
     "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    # "bevy_winit",
    "bevy_render",
    "bevy_gltf",
    "bevy_window",
    "ktx2",
    "zstd_rust",
    "tonemapping_luts",
    "bevy_text",
    "bevy_log",
    "reflect_auto_register",
    # "png",
    # "hdr",
    # "vorbis",
    "x11",
    # "filesystem_watcher",
] }
avian3d = { version = "^0.4", features = ["3d", "debug-plugin", "parallel", "parry-f32"] }
bevy-tnua-avian3d = { path = "avian3d" }

[package.metadata.docs.rs]
all-features = true

[features]
f64 = ["bevy-tnua-physics-integration-layer/f64"]
