[package]
name = "bevy-tnua-avian2d"
description = "Avian 2D integration for bevy-tnua"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-avian2d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.19", default-features = false }
# DO NOT COMMIT
#avian2d = { version = "^0.6", default-features = false, features = ["2d", "debug-plugin", "parallel"]}
avian2d = { git = "https://github.com/avianphysics/avian.git", package = "avian2d",  default-features = false, features = ["2d", "debug-plugin", "parallel", "parry-f32"], optional = true }
bevy-tnua-physics-integration-layer = { version = "^0.12", path = "../physics-integration-layer" }
ordered-float = "5.3.0"

[package.metadata.docs.rs]
all-features = true
features = ["bevy/bevy_asset"]

[features]
default = [  "avian2d/f32", "avian2d/parry-f32" ]
f64 = [
    "avian2d/f64",
    "avian2d/parry-f64",
    "bevy-tnua-physics-integration-layer/f64",
]
