[package]
name = "bevy-tnua-avian3d"
description = "Avian 3D integration for bevy-tnua"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-avian3d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.18", default-features = false }
avian3d = { version = "^0.5", default-features = false, features = ["3d", "debug-plugin", "parallel"] }
bevy-tnua-physics-integration-layer = { version = "^0.11", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
features = ["bevy/bevy_asset"]

[features]
default = [  "avian3d/parry-f32" ]
f64 = ["avian3d/parry-f64", "bevy-tnua-physics-integration-layer/f64"]
