[package]
name = "bevy-tnua-avian3d"
description = "Avian 3D integration for bevy-tnua"
version = "0.11.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-avian3d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.19", default-features = false }
# DO NOT COMMIT
# patching a soon to be published version of avian3d
#avian3d = { version = "^0.6", default-features = false, features = ["3d", "debug-plugin", "parallel"] }
avian3d = { git = "https://github.com/avianphysics/avian.git", package = "avian3d", features = ["3d", "debug-plugin", "parallel", "parry-f32"] }
bevy-tnua-physics-integration-layer = { version = "^0.12", path = "../physics-integration-layer" }
ordered-float = "5.3.0"

[package.metadata.docs.rs]
all-features = true
features = ["bevy/bevy_asset"]

[features]
default = [  "avian3d/parry-f32" ]
f64 = ["avian3d/parry-f64", "bevy-tnua-physics-integration-layer/f64"]
