[package]
name = "tnua-demos-crate"
version = "0.0.0"
publish = false
edition = "2021"
exclude = [
    "assets",
]

[features]
rapier = []
rapier2d = ["rapier", "dep:bevy_rapier2d", "dep:bevy-tnua-rapier2d"]
rapier3d = ["rapier", "dep:bevy_rapier3d", "dep:bevy-tnua-rapier3d"]

xpbd = []
xpbd2d = ["xpbd", "dep:bevy_xpbd_2d", "dep:bevy-tnua-xpbd2d"]
xpbd3d = ["xpbd", "dep:bevy_xpbd_3d", "dep:bevy-tnua-xpbd3d"]

[dependencies]
bevy = { version = "^0.13", features = [
     "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    # "bevy_winit",
    "bevy_render",
    "bevy_gltf",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_text",
    # "png",
    # "hdr",
    # "vorbis",
    "x11",
    # "filesystem_watcher",
] }
bevy-tnua = { path = ".." }
bevy-tnua-physics-integration-layer = { path = "../physics-integration-layer" }

bevy_rapier2d = { version = "^0.25", features = ["debug-render-2d"], optional = true }
bevy-tnua-rapier2d = { path = "../rapier2d", optional = true }

bevy_rapier3d = { version = "^0.25", features = ["debug-render-3d"], optional = true }
bevy-tnua-rapier3d = { path = "../rapier3d", optional = true }

bevy_xpbd_2d = { version = "^0.3", optional = true }
bevy-tnua-xpbd2d = { path = "../xpbd2d", optional = true }

bevy_xpbd_3d = { version = "^0.3", optional = true }
bevy-tnua-xpbd3d = { path = "../xpbd3d", optional = true }

bevy_egui = "0.25"
egui_plot = "0.26.2"
