[package]
name = "tnua-demos-crate"
version = "0.0.0"
publish = false
edition = "2021"
exclude = [
    "assets",
]

[features]
default = [
    # Comment this out when Bevy gets upgraded and bevy_egui lags behind
    "egui",
    "bevy_xpbd_3d?/parry-f32",
    "bevy_xpbd_2d?/parry-f32",
]
egui = ["dep:bevy_egui", "dep:egui_plot", "dep:egui_extras"]
rapier = []
rapier2d = ["rapier", "dep:bevy_rapier2d", "dep:bevy-tnua-rapier2d"]
rapier3d = ["rapier", "dep:bevy_rapier3d", "dep:bevy-tnua-rapier3d"]
f64 = ["bevy_xpbd_3d?/parry-f64", "bevy_xpbd_2d?/parry-f64", "bevy-tnua-physics-integration-layer/f64", "bevy-tnua/f64"]

xpbd = []
xpbd2d = ["xpbd", "dep:bevy_xpbd_2d", "dep:bevy-tnua-xpbd2d"]
xpbd3d = ["xpbd", "dep:bevy_xpbd_3d", "dep:bevy-tnua-xpbd3d"]

[dependencies]
bevy = { version = "^0.13", default-features = false, features = [
     "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    # "bevy_winit",
    "bevy_render",
    "bevy_gltf",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_text",
    # "png",
    # "hdr",
    # "vorbis",
    "x11",
    # "filesystem_watcher",
] }
bevy-tnua = { path = ".." }
bevy-tnua-physics-integration-layer = { path = "../physics-integration-layer" }

bevy_rapier2d = { version = "^0.26", features = ["debug-render-2d"], optional = true }
bevy-tnua-rapier2d = { path = "../rapier2d", optional = true }

bevy_rapier3d = { version = "^0.26", features = ["debug-render-3d"], optional = true }
bevy-tnua-rapier3d = { path = "../rapier3d", optional = true }

bevy_xpbd_2d = {version = "^0.4", default-features = false, features = ["2d","debug-plugin", "parallel"], optional = true}
bevy-tnua-xpbd2d = { path = "../xpbd2d", default-features = false, optional = true }

bevy_xpbd_3d = {version = "^0.4", default-features = false, features = ["3d","debug-plugin", "parallel", "async-collider"], optional = true }
bevy-tnua-xpbd3d = { path = "../xpbd3d", default-features = false, optional = true }

bevy_egui = { version = "0.27", optional = true, default-features = false, features = ["default_fonts", "render"] }
egui_plot = { version = "0.27", optional = true }
egui_extras = { version = "0.27", optional = true }

clap = { version = "^4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "^0.3", features = ["Window", "Location", "Url", "UrlSearchParams"] }
