[package]
name = "tnua-demos-crate"
version = "0.0.0"
publish = false
edition = "2021"
exclude = [
    "assets",
]

[features]
default = [
    "avian2d?/f32",
    "avian2d?/parry-f32",
    "avian3d?/f32",
    "avian3d?/parry-f32",
    # Comment these out when Bevy gets upgraded and a dependency lags behind
    "egui",
]
egui = ["dep:bevy_egui", "dep:egui_plot", "dep:egui_extras"]
framepace = ["dep:bevy_framepace"] # Not a default feature
rapier = []
rapier2d = [
    "rapier",
    "dep:bevy_rapier2d",
    # "dep:bevy-tnua-rapier2d",
]
rapier3d = [
    "rapier",
    "dep:bevy_rapier3d",
    # "dep:bevy-tnua-rapier3d",
]
f64 = [
    "avian2d?/f64",
    "avian2d?/parry-f64",
    "avian3d?/f64",
    "avian3d?/parry-f64",
    "bevy-tnua-physics-integration-layer/f64",
    "bevy-tnua/f64",
]

avian = []
avian2d = ["avian", "dep:avian2d", "dep:bevy-tnua-avian2d"]
avian3d = ["avian", "dep:avian3d", "dep:bevy-tnua-avian3d"]

[dependencies]
bevy = { version = "^0.17", default-features = false, features = [
     "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    # "bevy_scene",
    # "bevy_winit",
    "bevy_render",
    "bevy_gltf",
    "ktx2",
    "zstd_rust",
    "tonemapping_luts",
    "bevy_text",
    "bevy_window",
    "bevy_ui",
    "bevy_log",
    "reflect_auto_register",
    "bevy_sprite_render",
    # "png",
    # "hdr",
    # "vorbis",
    "x11",
    # "filesystem_watcher",
] }
bevy-tnua = { path = ".." }
bevy-tnua-physics-integration-layer = { path = "../physics-integration-layer" }

bevy_rapier2d = { version = "^0.31", features = ["debug-render-2d"], optional = true }
# bevy-tnua-rapier2d = { path = "../rapier2d", optional = true }

bevy_rapier3d = { version = "^0.31", features = ["debug-render-3d"], optional = true }
# bevy-tnua-rapier3d = { path = "../rapier3d", optional = true }

avian2d = { version = "^0.4.1", default-features = false, features = ["2d","debug-plugin", "parallel"], optional = true}
bevy-tnua-avian2d = { path = "../avian2d", default-features = false, optional = true }

avian3d = { version = "^0.4.1", default-features = false, features = ["3d","debug-plugin", "parallel"], optional = true }
bevy-tnua-avian3d = { path = "../avian3d", default-features = false, optional = true }

bevy_egui = { version = "0.38", optional = true, default-features = false, features = ["default_fonts", "render"] }
egui_plot = { version = "0.34", optional = true }
egui_extras = { version = "0.33", optional = true }

bevy_framepace = { version = "0.19", optional = true }

clap = { version = "^4", features = ["derive"] }
ordered-float = "5.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "^0.3", features = ["Window", "Location", "Url", "UrlSearchParams"] }
