[package]
name = "bevy-tnua-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1"
quote = "1"
syn = "2"
