[package]
name = "bevy-tnua-physics-integration-layer"
description = "Components for integrating physics backends with bevy-tnua"
version = "0.1.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/bevy-tnua"
documentation = "https://docs.rs/bevy-tnua-physics-integration-layer"

[dependencies]
bevy = { version = "^0.12", default-features = false }
