[package]
name = "bevy-tnua-physics-integration-layer"
description = "Components for integrating physics backends with bevy-tnua"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-physics-integration-layer"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.16", default-features = false }

[features]
f64 = []
