[package]
name = "bevy-tnua-rapier2d"
description = "Rapier 2D integration for bevy-tnua"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-rapier2d"
readme = "../README.md"

[dependencies]
# bevy_render is required because bevy_rapier uses bevy::render::primitives::Aabb
bevy = { version = "^0.15", default-features = false, features = ["bevy_render"] }
bevy_rapier2d = { version = "^0.28", default-features = false, features = ["dim2"] }
bevy-tnua-physics-integration-layer = { version = "^0.4", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
features = ["bevy_rapier2d/headless"]
