[package]
name = "bevy-tnua-rapier3d"
description = "Rapier 3D integration for bevy-tnua"
version = "0.1.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/bevy-tnua"
documentation = "https://docs.rs/bevy-tnua-rapier3d"

[dependencies]
bevy = { version = "^0.12", default-features = false }
bevy_rapier3d = { version = "^0.23", default-features = false, features = ["dim3"]}
bevy-tnua-physics-integration-layer = { version = "0.1.0", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
features = ["bevy_rapier3d/headless"]
