[package]
name = "bevy-tnua-rapier3d"
description = "Rapier 3D integration for bevy-tnua"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-rapier3d"
readme = "../README.md"

[dependencies]
# bevy_render is required because bevy_rapier uses bevy::render::primitives::Aabb
bevy = { version = "^0.13", features = ["bevy_render"] }
bevy_rapier3d = { version = "^0.25", features = ["dim3"]}
bevy-tnua-physics-integration-layer = { version = "0.1.0", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
features = ["bevy_rapier3d/headless"]
