[package]
name = "bevy-tnua-xpbd2d"
description = "XPBD 2D integration for bevy-tnua"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-xpbd2d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.12", default-features = false }
bevy_xpbd_2d = "^0.3"
bevy-tnua-physics-integration-layer = { version = "0.1.0", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
