[package]
name = "bevy-tnua-xpbd2d"
description = "XPBD 2D integration for bevy-tnua"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-xpbd2d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.13", default-features = false }
bevy_xpbd_2d = {version = "^0.4", default-features = false, features = ["2d","debug-plugin", "parallel"]}
bevy-tnua-physics-integration-layer = { version = "^0.2", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true

[features]
default = [  "bevy_xpbd_2d/parry-f32" ]
f64 = ["bevy_xpbd_2d/parry-f64",  "bevy-tnua-physics-integration-layer/f64" ]