[package]
name = "bevy-tnua-xpbd3d"
description = "XPBD 3D integration for bevy-tnua"
version = "0.1.0"
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/bevy-tnua"
documentation = "https://docs.rs/bevy-tnua-xpbd3d"

[dependencies]
bevy = { version = "^0.12", default-features = false }
bevy_xpbd_3d = "^0.3"
bevy-tnua-physics-integration-layer = { version = "0.1.0", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
