[package]
name = "bevy-tnua-xpbd3d"
description = "XPBD 3D integration for bevy-tnua"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/bevy-tnua-xpbd3d"
readme = "../README.md"

[dependencies]
bevy = { version = "^0.13", default-features = false}
bevy_xpbd_3d = "^0.4"
bevy-tnua-physics-integration-layer = { version = "0.1.0", path = "../physics-integration-layer" }

[package.metadata.docs.rs]
all-features = true
